Infra-Clinic/k8s-manifests/production/pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: ptcc-development
  labels:
    app: pgadmin
    project: "ProntDental"
    environment: "development"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: pgadmin
